--- a/SheFit/gyms/templates/gyms/gym_detail.html
+++ b/SheFit/gyms/templates/gyms/gym_detail.html
@@ -81,39 +81,41 @@
                     </div>
                     {% endif %}
 
-
-                    {% if gym.website %}
-                    <a href="{{ gym.website }}" target="_blank" class="btn btn-primary mt-3">
-                        زيارة الموقع الرسمي للنادي
-                    </a>
-                    {% endif %}
                 </div>
 
-
+                <div class="d-flex justify-content-between align-items-center">
                 <!-- الاشتراك للكوتش في النادي  -->
-
+                <div>
                 {% if gym.has_coach and request.user.is_authenticated and request.user.coach %}
 
                 {% if request.user.coach.gym == gym %}
                 <!-- لو المدرب مشترك -->
-                <a href="{% url 'gyms:toggle_coach_gym' gym.id %}" class="btn btn-danger mb-3">
+                <a href="{% url 'gyms:toggle_coach_gym' gym.id %}" class="btn btn-danger ">
                     إلغاء الانتساب
                 </a>
 
                 {% elif request.user.coach.gym == None %}
                 <!-- لو المدرب بدون نادي -->
-                <a href="{% url 'gyms:toggle_coach_gym' gym.id %}" class="btn btn-primary mb-3">
+                <a href="{% url 'gyms:toggle_coach_gym' gym.id %}" class="btn btn-primary ">
                     انتسب لهذا النادي
                 </a>
 
                 {% else %}
                 <!-- لو المدرب منتسب لنادي آخر -->
-                <div class="alert alert-warning mb-3">
+                <div class="alert alert-warning ">
                     أنت منتسب لنادٍ آخر ولا يمكنك الانتساب لنادٍ جديد.
                 </div>
                 {% endif %}
 
                 {% endif %}
+                </div>
+                
+                    {% if gym.website %}
+                    <a href="{{ gym.website }}" target="_blank" class="btn btn-primary mt-3 mb-3">
+                        زيارة الموقع الرسمي للنادي
+                    </a>
+                    {% endif %}
+                </div>
             </div>
         </div>
 
