--- a/SheFit/accounts/templates/accounts/signup.html
+++ b/SheFit/accounts/templates/accounts/signup.html
@@ -66,6 +66,7 @@ body {
     transform: scale(0.8);
     opacity: 0;
     transition: 0.5s ease;
+    pointer-events: none;
 }
 
 .shift-card:hover::before {
@@ -143,10 +144,10 @@ body {
 </div>
 
 <div class="container">
-    <div class="row g-4 justify-content-center">
+    <div class="row g-4 justify-content-center mt-3 mb-5">
 
         <!-- نادي -->
-        <div class="col-12 col-md-6 col-lg-4">
+        <div class="col-12 col-md-6 col-lg-4 mb-5">
             <div class="shift-card">
                 <i class="bi bi-building shift-icon"></i>
                 <h5 class="shift-title">نادي</h5>
@@ -156,7 +157,7 @@ body {
         </div>
 
         <!-- مدربة -->
-        <div class="col-12 col-md-6 col-lg-4">
+        <div class="col-12 col-md-6 col-lg-4 mb-5">
             <div class="shift-card">
                 <i class="bi bi-person shift-icon"></i>
                 <h5 class="shift-title">مدربة</h5>
@@ -166,7 +167,7 @@ body {
         </div>
 
         <!-- متدربة -->
-        <div class="col-12 col-md-6 col-lg-4">
+        <div class="col-12 col-md-6 col-lg-4 mb-5">
             <div class="shift-card">
                 <i class="bi bi-people shift-icon"></i>
                 <h5 class="shift-title">متدربة</h5>
