--- a/SheFit/main/templates/main/base.html
+++ b/SheFit/main/templates/main/base.html
@@ -13,7 +13,7 @@
     {% block style %}{% endblock %}
 </head>
 
-<body class="{% if request.COOKIES.mode == 'dark' %}bg-dark text-light{% endif %}">
+<body class="d-flex flex-column min-vh-100 {% if request.COOKIES.mode == 'dark' %}bg-dark text-light{% endif %}">
 
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary shadow-sm sticky-top">
@@ -142,12 +142,12 @@
     {% endfor %}
     {% endif %}
 
-    <main class="container py-4">
+    <main class="flex-fill container py-4">
         {% block content %}{% endblock %}
     </main>
 
 
-    <footer class="bg-light text-center py-4 mt-5 border-top">
+    <footer class="bg-light text-center py-4 mt-auto border-top">
         <p class="mb-1">© 2025 شيفت - جميع الحقوق محفوظة</p>
         <a href="/" class="mx-2">الرئيسية</a>
         <a class="mx-2" href="{% url 'main:about_view' %}">عنا</a>
